# rnn4ap

./: CMakeLists.txt  README.md
datasets/imu/: D1.csv  D1_scaled_pytorch.csv  D2.csv  D2_scaled_pytorch.csv  D3.csv  D3_scaled_pytorch.csv  D4.csv  D5.csv  README.md
datasets/px4/: px4_quad_log_01.csv  px4_quad_log_02.csv  px4_quad_log_03.csv  px4_quad_log_04.csv  px4_quad_log_05.csv  px4_quad_log_05_scaled_pytorch.csv  px4_quad_log_07.csv  px4_quad_log_08.csv  px4_quad_log_10.csv
netFiles/: gru_N32O1I9-adam.log.txt  gru_N32O1I9-adam.net.csv  gru_N32O1I9-adamax.log.txt  gru_N32O1I9-adamax.net.csv  lstm_N32O1I9-adam.log.txt  lstm_N32O1I9-adam.net.csv  lstm_N32O3I9-adam.log.txt  lstm_N32O3I9-adam.net.csv
results/: bbai_results_20210722.txt  bbblue_results_20210722.txt  bbgreen_results_20210722.txt  coraz7_results_20210722.txt  jetson_nano_results_20210722.txt  pynq_v2_results_20210722.txt  rpi0_results_20210722.txt  rpi3_results_20210722.txt  rpi4_results_20210722.txt
src/imu/: imu_log_handler.cc  imu_log_handler.hh
src/main/: gru_main.cc  imu_test_main.cc  lstm_main.cc  perf_main.cc
src/px4/: px4_log_handler.cc  px4_log_handler.hh
src/pytorch/: cl_gru_model.py  cl_lstm_model.py  main_test_D1.py  main_test_D2.py  main_test_D3.py  main_test_D4.py  main_test_D5.py  main_test_D6.py  main_test_PX4_1.py
src/rnn/: gru.cc  gru.hh  gru_stk_flt.cc  gru_stk_flt.hh  lstm.cc  lstm.hh  lstm_stk_flt.cc  lstm_stk_flt.hh  weights_handler.cc  weights_handler.hh
